# Analyse-numerique

./: README.md  question2.tex
TP1/: .merlin  Makefile  Root1D.ml  TP.tgz  dune  q5.ml  q6.ml  q6.txt  question2.aux  question2.out  question2.tex  question2.toc  rootFinding.ml
TP1/LaTeX/: TP1.tex
TP1/_build/: log
TP1/src/: dune  q5.ml  q6.ml  rootFinding.ml
TP2/: TP.tgz
TP2/LaTeX/: full.tex
TP2/_build/: log
TP2/src/: dune  q1.ml  q2.ml  q2.mli  q3.ml
TP3/resources/: graphs.gp
TP3/resources/Question4/: graphs.gp
TP3/resources/Question5/Test1/: graphs.gp
TP3/resources/Question5/Test6/: graphs.gp
TP3/src/: draw.ml  dune  max_theta.ml  pendulum.ml  pendulum.mli  solve.ml  tours.ml
_build/: log
_build/default/.dune/: configurator  configurator.v2
