(executables
    (names        rootFinding)
    (public_names rootFinding)
    (modules      rootFinding)
    (libraries    root1d))
    
(executables
    (names        q5)
    (public_names q5)
    (modules      q5))
    
(executables
    (names        q6)
    (public_names q6)
    (modules      q6))
